--- a/public/css/MyStyle.css
+++ b/public/css/MyStyle.css
@@ -2,14 +2,16 @@
 
 h2.header {font-family: sans-serif; color: gray; font-weight: bold;}
 h3.legend {font-family: sans-serif; font-weight: bold;}
+h4 {font-family: cursive; font-size: 11pt; font-weight: bold;}
 
 p.footer {font-family: sans-serif; font-size: 9pt; color: gray; margin-top: 12px;}
+a.btn {font-family: sans-serif; font-size: 9pt;}
 
 
 
 /*--------------------------------------Template View--------------------------------------*/
 
-.container-fluid {
+body {
 	background-image: url(../img/background/light_wool.png);
 	/*background-color: #ffffff;*/
 }
@@ -43,7 +45,7 @@ p.footer {font-family: sans-serif; font-size: 9pt; color: gray; margin-top: 12px
 }
 
 .Row-space {
-	height: 70px;
+	height: 50px;
 }
 
 
@@ -245,9 +247,68 @@ label {
 	margin-top: 3px;
 }
 
+.inform-height {
+  height: 30px;
+}
 
-/*--------------------------------------Dashboard Admin--------------------------------------*/
+.btn-right {
+  float: right;
+}
 
-/*--------------------------------------Dashboard Guru--------------------------------------*/
+.btn-file {
+  position: relative;
+  overflow: hidden;
+}
+.btn-file input[type=file] {
+  position: absolute;
+  top: 0;
+  right: 0;
+  min-width: 100%;
+  min-height: 100%;
+  font-size: 100px;
+  text-align: right;
+  filter: alpha(opacity=0);
+  opacity: 0;
+  background: red;
+  cursor: inherit;
+  display: block;
+}
+input[readonly] {
+  background-color: white !important;
+  cursor: text !important;
+}
+
+
+/*--------------------------------------View--------------------------------------*/
+
+.main-content {
+  padding-top: 15px;
+}
+
+.main-content-profile {
+  padding-top: 25px;
+}
+
+.row-table-data {
+  padding-top: 20px;
+  height: 450px;
+}
+
+.row-paging-table {
+  text-align: center;
+  margin-bottom: -25px;
+}
+
+
+
+/*--------------------------------------table--------------------------------------*/
+
+thead th {
+  background-color: #127EA4;
+  text-align: center;
+  color: white;
+}
+
+
 
 /*--------------------------------------Dashboard Siswa--------------------------------------*/
