--- a/public/css/kuis.css
+++ b/public/css/kuis.css
@@ -2,30 +2,35 @@
 
 h4.judul-soal {font-family: sans-serif; font-size: 14pt; font-weight: bold;}
 
-p.durasi {font-family: sans-serif; font-size: 12pt; font-weight: bold; text-align: right;}
+h3.durasi {font-family: sans-serif; font-size: 12pt; font-weight: bold; text-align: right;}
 
 
-.row-judul {
-  margin-bottom: 25px;
+.form-group p {
+  font-family: sans-serif;
+  font-size: 11.5pt;
+}
+
+.row-judul {  
+  padding-top: 10px;
 }
 
 table.table-soal th, tr, td{
   border-style: none !important;
+  vertical-align: text-top !important;
 }
 
-thead.thead-soal th {
+.thead-soal th {
   text-align: justify;
   font-family: verdana;
   font-weight: normal;
   font-size: 11pt;
-  vertical-align: text-top;
-}
-
-tbody.tbody-jawaban tr {
-  margin-top: -20px;
 }
 
 .radio label {
   font-family: verdana;
   font-size: 11pt;
+}
+
+.radio {
+  margin-top: -10px !important;
 }
