--- a/public/css/MyStyle.css
+++ b/public/css/MyStyle.css
@@ -8,6 +8,16 @@ p.footer {font-family: sans-serif; font-size: 9pt; color: gray; margin-top: 12px
 
 a.btn {font-family: sans-serif; font-size: 9pt;}
 
+/*a, a:visited {
+  text-decoration: none;
+  color: black;
+}
+
+a:link, a:hover, a:active {
+  text-decoration: none;
+  color: #006699;
+}*/
+
 
 
 /*--------------------------------------Template View--------------------------------------*/
