--- a/public/css/kuis.css
+++ b/public/css/kuis.css
@@ -1,36 +1,18 @@
-/*--------------------------------------KUIS--------------------------------------*/
+/*------------------------------------------- Sub Modal Materi -------------------------------------------*/
 
-h4.judul-soal {font-family: sans-serif; font-size: 14pt; font-weight: bold;}
-
-h3.durasi {font-family: sans-serif; font-size: 12pt; font-weight: bold; text-align: right;}
-
-
-.form-group p {
-  font-family: sans-serif;
-  font-size: 11.5pt;
+thead.modal-materi th {
+	text-align: center;
+	background-color: #127EA4;
+	color: #ffffff;
 }
 
-.row-judul {  
-  padding-top: 10px;
-}
 
-table.table-soal th, tr, td{
-  border-style: none !important;
-  vertical-align: text-top !important;
-}
+/*------------------------------------------- Modal Soal -------------------------------------------*/
 
-.thead-soal th {
-  text-align: justify;
-  font-family: verdana;
-  font-weight: normal;
-  font-size: 11pt;
-}
+p.nomor-soal {font-family: arial; font-size: 13pt; font-weight: bold;}
 
-.radio label {
-  font-family: verdana;
-  font-size: 11pt;
-}
-
-.radio {
-  margin-top: -10px !important;
+label.label-modal-soal {
+	font-family: sans-serif;
+	font-size: 11pt;
+	font-weight: normal;
 }
