--- a/public/css/MyStyle.css
+++ b/public/css/MyStyle.css
@@ -1,7 +1,9 @@
 /*--------------------------------------Font Style--------------------------------------*/
 
 h2.header {font-family: sans-serif; color: gray; font-weight: bold;}
+
 h3.legend {font-family: sans-serif; font-weight: bold;}
+
 h4 {font-family: cursive; font-size: 11pt; font-weight: bold;}
 
 p.footer {font-family: sans-serif; font-size: 9pt; color: gray; margin-top: 12px;}
@@ -300,7 +302,7 @@ input[readonly] {
 }
 
 .row-table-data {
-  padding-top: 10px;
+  padding-top: 20px;
   height: 450px;
 }
 
@@ -320,9 +322,25 @@ thead.index th {
 }
 
 tbody.index td {
-  font-size: 10pt;
 }
 
 td.kolom-tengah {
   text-align: center;
+}
+
+td.kolom-kanan {
+  text-align: right;
+}
+
+
+/*----------------------------------------- Modal -----------------------------------------*/
+
+p.modal-title {font-family: sans-serif; font-size: 15pt; font-weight: bold;}
+
+.modal-width-index {
+  max-width: 100%;
+}
+
+.label-right {
+  text-align: right;
 }
