XL - New Reposit
New Elfis

--- a/public/css/MyStyle.css
+++ b/public/css/MyStyle.css
@@ -331,6 +331,10 @@ input[readonly] {
 
 /*--------------------------------------table--------------------------------------*/
 
+.dataTable {
+  text-align: center;
+}
+
 thead.index th {
   background-color: #127EA4;
   text-align: center;
