--- a/public/css/apps/kuis.css
+++ b/public/css/apps/kuis.css
@@ -2,9 +2,20 @@
 
 p.nomor-soal {font-family: arial; font-size: 13pt; font-weight: bold;}
 
+h4.judul-soal {font-family: sans-serif; font-size: 15pt; font-weight: bold;}
+
+
+
 label.label-modal-soal {
 	font-family: sans-serif;
-	font-size: 11pt;
+	font-size: 12pt;
 	font-weight: normal;
 }
 
+.row-judul {
+	margin-top: 20px;
+}
+
+.daftar-soal {
+	margin-top: 15px;
+}
