--- a/public/css/apps/tugas.css
+++ b/public/css/apps/tugas.css
@@ -15,33 +15,60 @@ h4.unggah-jawaban {font-family: sans-serif; font-size: 12pt; font-weight: bold;}
   margin-bottom: -25px;
 }
 
-ul {
-  list-style-type: none;
-}
-
-
 
 /*--------------------------------------table--------------------------------------*/
 
-thead.tugas th {
-  background-color: transparent;
-  text-align: center;
-  color: black;
+.table-tugas th,
+.table-tugas td {
+  background-color: white;
+  border: 2px solid #ddd !important;
 }
 
-tbody
-.tugas tr {
+thead.tugas th {
   text-align: center;
-}
-.info tr {
-	font-size: 12px;
+  color: black;
 }
 
 td.kolom-kiri {
   text-align: left;
 }
 
-table.table-soal th, tr, td{
-  border-style: none !important;
-  vertical-align: text-top !important;
+
+@media {
+  
+  #right {
+    top: 0;
+    bottom: 0;
+    right: 0;
+    overflow-y: scroll;
+    width: 100%;
+    max-height: 80%;
+  }
+}
+
+/*--------------------------------------Timer--------------------------------------*/
+
+ul.countdown {
+  list-style: none;
+  margin: 20px 0;
+  padding: 0;
+  display: block;
+  text-align: center;
+}
+ul.countdown li {
+  display: inline-block;
+}
+ul.countdown li span {
+  font-size: 20px;
+  font-weight: 300;
+  line-height: 20px;
+}
+ul.countdown li.seperator {
+  font-size: 20px;
+  line-height: 20px;
+  vertical-align: top;
+}
+ul.countdown li p {
+  color: #a7abb1;
+  font-size: 12px;
 }
