AT - Sync Terbaru

--- a/public/css/MyStyle.css
+++ b/public/css/MyStyle.css
@@ -352,6 +352,9 @@ td.kolom-kanan {
   text-align: right;
 }
 
+td.kolom-kiri {
+  text-align: left;
+}
 
 /*----------------------------------------- Modal -----------------------------------------*/
 
