--- a/public/css/MyStyle.css
+++ b/public/css/MyStyle.css
@@ -319,12 +319,13 @@ input[readonly] {
 
 .row-table-data {
   padding-top: 20px;
-  height: 450px;
+  height: 460px;
+  text-align: center;
 }
 
 .row-paging-table {
   text-align: center;
-  margin-bottom: -25px;
+  height: 50px;
 }
 
 
