--- a/public/css/apps/forum.css
+++ b/public/css/apps/forum.css
@@ -1,4 +1,5 @@
 h3.header-judul {font-family: sans-serif; font-size: 16pt; font-weight: bold;}
+h3.kosong {font-family:sans-serif; color:#006699;};
 
 p.header-pembuat {font-family: sans-serif; font-size: 12pt}
 p.sub-header-buat {font-family: sans-serif; font-size: 10pt; font-weight: normal;}
@@ -33,6 +34,10 @@ a.rating:hover, a.rating:active, a.rating:link {
 
 .row-isi-forum {
 	margin-top: 10px;
+}
+
+.space-footer {
+	height:100px;
 }
 
 
