--- a/public/css/apps/forum.css
+++ b/public/css/apps/forum.css
@@ -49,7 +49,7 @@ tr.forum-kepala {
 }
 
 tr.forum-komentar {
-	background-color: #f57900;
+	background-color: #2d80c1;
 	color: white;
 	margin-top: 15px !important;
 }
@@ -65,3 +65,6 @@ tr.forum td {
 table.table-komentar-forum {
 	margin-top: 10px;
 }
+/*f57900*/
+/*219DD3*/
+/*2d80c1*/
