--- a/public/css/apps/forum.css
+++ b/public/css/apps/forum.css
@@ -1,4 +1,5 @@
 h3.header-judul {font-family: sans-serif; font-size: 16pt; font-weight: bold;}
+h3.kosong {font-family:sans-serif; color:#006699;};
 
 p.header-pembuat {font-family: sans-serif; font-size: 12pt}
 p.sub-header-buat {font-family: sans-serif; font-size: 10pt; font-weight: normal;}
@@ -35,6 +36,24 @@ a.rating:hover, a.rating:active, a.rating:link {
 	margin-top: 10px;
 }
 
+.space-footer {
+	height:100px;
+}
+
+
+a.tabs_komentar, a.tabs_komentar:visited {
+	text-decoration: none;
+	color: black;
+	font-family: sans-serif;
+	background-color: none;
+}
+
+a.tabs_komentar:hover, a.tabs_komentar:active, a.tabs_komentar:link {
+	text-decoration: none;
+	color: #219DD3;
+	font-family: sans-serif;
+}
+
 
 /* ----------------------------------------- Tabel -----------------------------------------*/
 
@@ -44,7 +63,7 @@ tr.forum-kepala {
 }
 
 tr.forum-komentar {
-	background-color: #f57900;
+	background-color: #2d80c1;
 	color: white;
 	margin-top: 15px !important;
 }
@@ -60,3 +79,6 @@ tr.forum td {
 table.table-komentar-forum {
 	margin-top: 10px;
 }
+/*f57900*/
+/*219DD3*/
+/*2d80c1*/
