--- a/public/css/apps/kuis_siswa.css
+++ b/public/css/apps/kuis_siswa.css
@@ -3,7 +3,13 @@
 h4.judul-soal {font-family: sans-serif; font-size: 14pt; font-weight: bold;}
 
 h3.durasi {font-family: sans-serif; font-size: 12pt; font-weight: bold; text-align: right;}
+h3.durasi-a {font-family: sans-serif; font-size: 12pt; font-weight: bold; text-align: center;}
 
+a.next-nilai {font-size: 11pt !important;}
+
+.rata-kanan-text{
+  text-align: right;
+}
 
 .form-group p {
   font-family: sans-serif;
@@ -33,4 +39,17 @@ table.table-soal th, tr, td{
 
 .radio {
   margin-top: -10px !important;
+}
+
+.kolom-justify {
+  text-align: justify;
+}
+
+.nilai-kiri {
+  text-align: left !important;
+}
+
+.row-table-data-soal {
+  padding-top: 20px;
+  text-align: center;
 }
